--- a/files/style.css
+++ b/files/style.css
@@ -1,14 +1,15 @@
 input {
   width: 229px;
   background-color: rgb(199, 199, 199);
-  margin-bottom: 10px;
-  margin-left: 28px;
+  margin-bottom: 30px;
 
   border: none;
   border-end-end-radius: 20px;
   border-end-start-radius: 20px;
   
   text-indent: 10px;
+  
+  scale: 170%;
 }
 
 body {
@@ -16,16 +17,17 @@ body {
 }
 
 h1 {
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: rgb(85, 62, 32);
   background-color: rgb(173, 132, 77);
   width: 276px;
-  margin-left: 10px;
 
   border-radius: 10px;
   
   text-indent: 10px;
+  
+  scale: 170%;
 }
 
 .weekdays:active {
@@ -34,23 +36,31 @@ h1 {
 }
 
 .weekdays {
+  margin-left: 20px;
+  margin-right: 20px;
+
   background-color: rgb(59, 160, 49);
-  margin-left: 7px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 
   border: none;
   border-end-end-radius: 10px;
   box-shadow: 2px 2px 0 rgb(44, 121, 37); 
+  
+  scale: 170%;
 }
 
 .day_off {
+  margin-left: 20px;
+  margin-right: 20px;
+
   background-color: rgb(190, 30, 30);
-  margin-left: 7px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 
   border: none;
   border-end-end-radius: 10px;
   box-shadow: 2px 2px 0 rgb(148, 23, 23); 
+
+  scale: 170%;
 }
 
 .day_off:active {
@@ -59,12 +69,13 @@ h1 {
 }
 
 .done {
-  margin-left: 124px;
   background-color: rgb(119, 119, 119);
   box-shadow: 2px 2px 0 rgb(94, 94, 94);
 
   border: none;
   border-radius: 5px;
+
+  scale: 170%;
 }
 
 .done:active {
@@ -80,7 +91,6 @@ li {
   background-color: rgb(141, 108, 64);
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-left: -40px;
 
   padding-left: 10px;
   padding-right: 10px;
@@ -108,4 +118,9 @@ li {
 
 .tasks:active {
   background-color: rgb(117, 30, 30);
+}
+
+.centered {
+  display: flex;
+  justify-content: center;
 }
